# predicting-cognitive-performance-from-brain-network-topology

./: CITATION.cff  LICENSE.md  README.md  pyproject.toml
data/1000BRAINS/connectomes/boldTimeseries/: 0001_1.csv  0001_2.csv  0002_1.csv  0002_2.csv  0003_1.csv  0004_1.csv  0005_1.csv  0006_1.csv  0006_2.csv  0007_1.csv  0007_2.csv  0008_1.csv  0009_1.csv  0009_2.csv  0010_1.csv  0011_1.csv  0012_1.csv  0013_1.csv  0014_1.csv  0014_2.csv  0015_1.csv  0016_1.csv  0017_1.csv  0017_2.csv  0018_1.csv  0019_1.csv  0020_1.csv  0021_1.csv  0022_1.csv  0023_1.csv  0023_2.csv  0024_1.csv  0025_1.csv  0025_2.csv  0026_1.csv  0026_2.csv  0027_1.csv  0028_1.csv  0029_1.csv  0030_1.csv  (+309 more)
data/1000BRAINS/connectomes/functionalConnectomes/: 0001_1.csv  0001_2.csv  0002_1.csv  0002_2.csv  0003_1.csv  0004_1.csv  0005_1.csv  0006_1.csv  0006_2.csv  0007_1.csv  0007_2.csv  0008_1.csv  0009_1.csv  0009_2.csv  0010_1.csv  0011_1.csv  0012_1.csv  0013_1.csv  0014_1.csv  0014_2.csv  0015_1.csv  0016_1.csv  0017_1.csv  0017_2.csv  0018_1.csv  0019_1.csv  0020_1.csv  0021_1.csv  0022_1.csv  0023_1.csv  0023_2.csv  0024_1.csv  0025_1.csv  0025_2.csv  0026_1.csv  0026_2.csv  0027_1.csv  0028_1.csv  0029_1.csv  0030_1.csv  (+309 more)
data/1000BRAINS/connectomes/structuralConnectomes/: 0001_1.csv  0001_2.csv  0002_1.csv  0002_2.csv  0003_1.csv  0004_1.csv  0005_1.csv  0006_1.csv  0006_2.csv  (+340 more)
data/1000BRAINS/sourceFiles/: Schaefer2018_100Parcels_7Networks_order_info.txt  brainVolume.csv  demographics.csv  hemisphereMap.txt  subjects.txt  systemsMap.txt
src/: data.py  main.py  stats.py  visualization.py
