[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pingouin>=0.5.5",
    "scipy>=1.16.1",
    "termcolor>=3.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
